--- a/_data/i18n/kr.yml
+++ b/_data/i18n/kr.yml
@@ -3,5 +3,37 @@ site:
   description: "페르소나5 더 팬텀 X의 모든 정보를 한 곳에서 확인하세요. 캐릭터, 페르소나, 스킬, 공략 가이드를 제공합니다."
   keywords: "페르소나5 더 팬텀 X, P5X, 루페르넷, 괴도, 페르소나, 계시, 택틱, 게임공략"
   author: "루페르넷"
-  url: "https://lufelnet.com"
-  baseurl: "" 
+  url: "https://lufel.net"
+  baseurl: ""
+
+# 다국어 공통
+language_notice: ""
+
+# 홈페이지
+site_title: "P5X 루페르넷"
+menu_character: "괴도"
+menu_persona: "페르소나"
+menu_revelations: "계시"
+menu_tactic: "택틱"
+menu_character_desc_desktop: "보다 높은 점수, 보다 쉬운 클리어를 위한<br>괴도별 육성 전략을 만나보세요"
+menu_character_desc_mobile: "괴도별 육성 전략을 만나보세요"
+menu_persona_desc_desktop: "핵심 페르소나 추천과 더불어<br>각 페르소나에 어울리는 스킬 세팅까지"
+menu_persona_desc_mobile: "핵심 페르소나 추천과 스킬 세팅까지"
+menu_revelations_desc_desktop: "계시 정보들을 한 눈에!<br>속성별, 일월성진별 원하는 대로 매칭"
+menu_revelations_desc_mobile: "계시 정보들을 한 눈에!"
+menu_tactic_desc_desktop: "본인만의 택틱을 만들고 공유하고,<br>바다와 흉몽에서 높은 점수를 쟁취하세요"
+menu_tactic_desc_mobile: "본인만의 택틱을 만들고 공유하세요"
+menu_goto: "바로가기"
+popular_characters: "인기 괴도"
+recent_updates: "최신 업데이트"
+guides: "가이드"
+guide_city: "도시 생활"
+guide_growth: "육성 및 재화"
+guide_battle: "전투 및 팰리스"
+tactic_workshop: "택틱 대장간 NEW"
+show_more: "더보기"
+
+# Footer
+footer_disclaimer: "※ 루페르넷은 개인이 만든 비공식 페르소나5X 정보 제공 사이트로 게임의 콘텐츠와 소재의 트레이드마크와 저작권은 SEGA·ATLUS·Perfect World Games에 있습니다."
+footer_contact: "✉️ contact : superphil722@gmail.com　💬 discord : absolroot　@루트　"
+footer_report_link: "제보 및 요청" 
