--- a/_data/i18n/en.yml
+++ b/_data/i18n/en.yml
@@ -52,5 +52,5 @@ filtered_count: "Total"
 
 # Footer
 footer_disclaimer: "※ LufelNet is an unofficial Persona 5X information site created by individuals. The trademarks and copyrights of game content and materials belong to SEGA·ATLUS·Perfect World Games."
-footer_contact: "✉️ contact : superphil722@gmail.com　💬 discord : absolroot　@Root　"
+footer_contact_name: "Root"
 footer_report_link: "Report & Request" 
