--- a/_data/i18n/jp.yml
+++ b/_data/i18n/jp.yml
@@ -52,5 +52,5 @@ filtered_count: "全体"
 
 # Footer
 footer_disclaimer: "※ ルフェルネットは個人が作成した非公式ペルソナ5X情報提供サイトで、ゲームのコンテンツと素材の商標と著作権はSEGA·ATLUS·Perfect World Gamesに帰属します。"
-footer_contact: "✉️ contact : superphil722@gmail.com　💬 discord : absolroot　@Root　"
+footer_contact_name: "Root"
 footer_report_link: "情報提供・リクエスト" 
