--- a/_data/i18n/kr.yml
+++ b/_data/i18n/kr.yml
@@ -35,5 +35,5 @@ show_more: "더보기"
 
 # Footer
 footer_disclaimer: "※ 루페르넷은 개인이 만든 비공식 페르소나5X 정보 제공 사이트로 게임의 콘텐츠와 소재의 트레이드마크와 저작권은 SEGA·ATLUS·Perfect World Games에 있습니다."
-footer_contact: "✉️ contact : superphil722@gmail.com　💬 discord : absolroot　@루트　"
+footer_contact_name: "루트"
 footer_report_link: "제보 및 요청" 
