--- a/_data/i18n/en.yml
+++ b/_data/i18n/en.yml
@@ -30,7 +30,7 @@ guides: "Guides"
 guide_city: "City Life"
 guide_growth: "Growth & Resources"
 guide_battle: "Battle & Palace"
-tactic_workshop: "Tactic Workshop NEW"
+tactic_workshop: "Tactic Library"
 show_more: "Show More"
 
 # 네비게이션
