--- a/_data/i18n/kr.yml
+++ b/_data/i18n/kr.yml
@@ -30,7 +30,7 @@ guides: "가이드"
 guide_city: "도시 생활"
 guide_growth: "육성 및 재화"
 guide_battle: "전투 및 팰리스"
-tactic_workshop: "택틱 대장간 NEW"
+tactic_workshop: "택틱 도서관"
 show_more: "더보기"
 
 # Footer
