--- a/_data/i18n/jp.yml
+++ b/_data/i18n/jp.yml
@@ -30,7 +30,7 @@ guides: "ガイド"
 guide_city: "都市生活"
 guide_growth: "育成・資源"
 guide_battle: "戦闘・パレス"
-tactic_workshop: "タクティクス図書館"
+tactic_workshop: "タクティクスライブラリー"
 show_more: "もっと見る"
 
 # 네비게이션
