--- a/_data/i18n/en.yml
+++ b/_data/i18n/en.yml
@@ -21,7 +21,7 @@ menu_persona_desc_desktop: "Core persona recommendations<br>and skill settings f
 menu_persona_desc_mobile: "Core persona recommendations and skill settings"
 menu_revelations_desc_desktop: "All revelation information at a glance!<br>Match by element and sun/moon/star as desired"
 menu_revelations_desc_mobile: "All revelation information at a glance!"
-menu_tactic_desc_desktop: "Create and share your own tactics,<br>achieve high scores in ocean and nightmare"
+menu_tactic_desc_desktop: "Create and share your own tactics,<br>achieve high scores in sea and nightmare"
 menu_tactic_desc_mobile: "Create and share your own tactics"
 menu_goto: "Go to"
 popular_characters: "Popular Characters"
