--- a/i18n/pages/guides/seo-meta.json
+++ b/i18n/pages/guides/seo-meta.json
@@ -1,14 +1,14 @@
 {
   "kr": {
-    "title": "가이드 | 루페르넷 페르소나5 더 팬텀 X",
+    "title": "아티클 | 루페르넷 페르소나5 더 팬텀 X",
     "description": "페르소나5 더 팬텀 X 공략 가이드"
   },
   "en": {
-    "title": "Guides | Lufelnet Persona 5: The Phantom X",
+    "title": "Articles | Lufelnet Persona 5: The Phantom X",
     "description": "Persona 5: The Phantom X Strategy Guides"
   },
   "jp": {
-    "title": "ガイド | Lufelnet ペルソナ5 ザ・ファントム X",
+    "title": "攻略記事 | Lufelnet ペルソナ5 ザ・ファントム X",
     "description": "ペルソナ5 ザ・ファントムX 攻略ガイド"
   },
   "cn": {
